# dct-os

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  LICENSE  LICENSING.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: cla.yml  publish.yml  test.yml
dct_os/: __main__.py  app.py  database_manager.py  db.py  log_webhook.py  schema.sql  seed.sql
dct_os/api/: __init__.py  cost_codes.py  dockets.py  projects.py  purchase_orders.py  resources.py  work_orders.py
dct_os/migrations/: 001_initial_schema.py  002_resource_details.py  003_suppliers.py  004_source_filepath.py  __init__.py
dct_os/static/css/: app.css
dct_os/static/js/: app.js
dct_os/templates/: base.html
docs/: API.md
tests/: test_api.py
